--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="items"></div>
-        <div id="text" onclick="buttun();">
-            Click vào đi!
-        </div>
+        <button id="myButton">
+            <svg class="empty" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32">
+              <path fill="none" d="M0 0H24V24H0z"></path>
+              <path d="M16.5 3C19.538 3 22 5.5 22 9c0 7-7.5 11-10 12.5C9.5 20 2 16 2 9c0-3.5 2.5-6 5.5-6C9.36 3 11 4 12 5c1-1 2.64-2 4.5-2zm-3.566 15.604c.881-.556 1.676-1.109 2.42-1.701C18.335 14.533 20 11.943 20 9c0-2.36-1.537-4-3.5-4-1.076 0-2.24.57-3.086 1.414L12 7.828l-1.414-1.414C9.74 5.57 8.576 5 7.5 5 5.56 5 4 6.656 4 9c0 2.944 1.666 5.533 4.645 7.903.745.592 1.54 1.145 2.421 1.7.299.189.595.37.934.572.339-.202.635-.383.934-.571z"></path>
+            </svg>
+            <svg class="filled" height="32" width="32" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 0H24V24H0z" fill="none"></path>
+              <path d="M16.5 3C19.538 3 22 5.5 22 9c0 7-7.5 11-10 12.5C9.5 20 2 16 2 9c0-3.5 2.5-6 5.5-6C9.36 3 11 4 12 5c1-1 2.64-2 4.5-2z"></path>
+            </svg>
+            Nhấn vào đây nha
+          </button>
+          
         <div class="traitym">
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1875.93 493.34"><defs><style>.cls-1{fill:#fff;}.cls-1,.cls-2{stroke:#231f20;stroke-miterlimit:10;}.cls-2{fill:none;}.cls-3{fill:#ed1c24;}</style></defs><polyline class="cls-1" points="0 345.73 337.04 345.73 414.81 171.65 474.07 490.17 511.11 212.4 559.26 436.47 603.7 180.17 642.59 330.91 981.48 330.91 1294.44 330.91 1368.52 216.1 1459.26 447.58 1529.63 90.17 1614.82 323.51 1875.93 323.51"/><path class="cls-2" d="M1030.63,900.74" transform="translate(-49.15 -569.83)"/><path class="cls-3" d="M1030.34,900.74,1194.5,736.57c1.71-1.87,37.92-42.88,21.84-95.37-15-49-62-64.09-65.86-65.25-7-2-37.93-10.18-71,6.32-35.56,17.76-47.12,50.84-49.18,57.09-1.65-6.13-11.06-38.59-44.35-57.46-30.37-17.23-60-11.44-67-9.87-5.64,1.34-49.58,12.54-69.35,55.47-16.23,35.24-9.75,77.91,16.52,109.07Z" transform="translate(-49.15 -569.83)"/></svg>
         </div>
