--- a/index2.html
+++ b/index2.html
@@ -13,8 +13,9 @@
     @import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600&display=swap');
     body{
-        background-image: url("anh/bgr1.jpg");
+        background-image: url("anh/pexels-moose-photos-1037994.jpg");
         background-size: cover;
+        background-position: center;
         background-repeat: no-repeat;
         margin: 0;
         padding: 0;
@@ -79,7 +80,7 @@
         </div>
         <body>
             <audio autoplay loop>
-              <source src="nhac/reynard-silva (mp3cut.net).mp3" type="audio/mpeg">
+              <source src="nhac/Yêu em trong mơ - Sino x Kai x An Vũ - Karaoke (mp3cut.net).m4a" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
     </div>
