--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <style>
+    
     @import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200&family=Merriweather:ital@1&display=swap');
     body{
         background-image: url("anh/pexels-moose-photos-1037994.jpg");
         background-size: cover;
@@ -58,12 +60,13 @@
             height: 100%;
         }
     }
- 
+
 
 </style>
 <body>
-
+  
     <div class="wrapper">
+  
         <div class="items"></div>
         <div class="content">
             <div class="text"><i class="fa-solid fa-heart"></i>Happy Birhday Ánh Tiên<i class="fa-solid fa-heart"></i></div>
